--- a/tools/makefile
+++ b/tools/makefile
@@ -3,7 +3,7 @@
 
 .SILENT:
 
-GARGS	 = -q -m $(GFLAGS) -I../src -I../soap -I../ssl -I../include $(INCLUDES)
+GARGS	 = -q -m $(GFLAGS) -I../src -I../xsrc -I../soap -I../ssl -I../include $(INCLUDES)
 
 TOOLS	 = awsres
 GEN      =
