--- a/regtests/makefile
+++ b/regtests/makefile
@@ -35,7 +35,8 @@ ifeq ($(MODE),ssl)
 LARGS := $(LARGS) -lssl -lcrypto
 
 RT_SOAP_SEC = test_sec_soap
-RT_STD_SEC = tsgetparam ssp ssback cert ssock2 ssto ssockto sslcfg
+RT_STD_SEC = tsgetparam ssp ssback cert ssock2 ssto ssockto sslcfg \
+	huge_response_sec
 
 else
 # Without SSL support
