Add SSL libraries.

--- a/workspace/build
+++ b/workspace/build
@@ -14,4 +14,5 @@ XMLADA=/opt/xmlada
 
 gnatmake -O2 -g $1 -I. -I$XMLADA/include/xmlada -I../include -I../soap \
 -I../src -I../ssl -I../xsrc -largs -L$XMLADA/lib -lxmlada_input_sources \
--lxmlada_dom -lxmlada_sax -lxmlada_unicode -L../lib -lz $lopts -bargs -E
+-lxmlada_dom -lxmlada_sax -lxmlada_unicode -L../lib -lz $lopts -lcrypto -lssl \
+-bargs -E
