--- a/regtests/makefile
+++ b/regtests/makefile
@@ -50,8 +50,9 @@ LARGS := $(LARGS) -lpoll
 endif
 
 # SOAP regression tests
-RT_SOAP = soap1 soap2 soap3 soap4 soap5 workorder testxml test_soap xmlt \
-	test_soap2 test_soap3 test_soap4 test_soap5 disp_soap $(RT_SOAP_SEC)
+RT_SOAP = soap1 soap2 soap3 soap4 soap5 soap6 workorder testxml test_soap \
+	xmlt test_soap2 test_soap3 test_soap4 test_soap5 disp_soap \
+	$(RT_SOAP_SEC)
 
 ifdef EXTRA_TESTS
 RT_SOAP := test_speed $(RT_SOAP)
