--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -100,6 +100,8 @@ b~soap4.adb
 b~soap4.ads
 b~soap5.adb
 b~soap5.ads
+b~soap6.adb
+b~soap6.ads
 b~sock1.adb
 b~sock1.ads
 b~sp.adb
@@ -365,6 +367,7 @@ soap3.tmp
 soap4
 soap4.res
 soap5.res
+soap6.res
 sock1
 sock1.res
 sock1.tmp
