(GCC): New variable. (GCC_FOR_HOST): Idem.

--- a/makefile.conf
+++ b/makefile.conf
@@ -89,6 +89,8 @@ CP	 	  = cp -p
 DIFF	 	  = diff
 DLL2DEF		  = dll2def
 DLLTOOL	 	  = dlltool
+GCC               = gcc
+GCC_FOR_HOST      = gcc
 GNATMAKE	  = gnatmake
 GNATMAKE_FOR_HOST = gnatmake
 GREP		  = grep
