--- a/src/makefile
+++ b/src/makefile
@@ -25,7 +25,7 @@ SOURCES	= aws-client.adb aws-communication-client.adb \
 	aws-ldap-thin.adb aws-ldap.ads aws-log.adb aws-messages.adb \
 	aws-mime.adb aws-net-buffered.adb aws-net-ssl.adb aws-net-std.adb \
 	aws-net-stream_io.adb aws-net.adb aws-os_lib.adb \
-        aws-os_lib-definitions.ads \
+	aws-os_lib-definitions.ads \
 	aws-parameters-set.adb aws-parameters.adb aws-resources-embedded.adb \
 	aws-resources-files.adb aws-resources-streams.adb aws-resources.adb \
 	aws-resources-streams-memory.ads aws-resources-streams-zlib.adb \
@@ -43,7 +43,7 @@ SOURCES	= aws-client.adb aws-communication-client.adb \
 	aws-templates.ads aws-translator.adb aws-url-raise_url_error.adb \
 	aws-url.adb aws-utils.adb aws.ads aws-exceptions.ads \
 	aws-status-translate_table.adb aws-server-status.adb \
-	aws-server-log.adb aws-pop.adb \
+	aws-server-log.adb aws-pop.adb aws-net-generic_sets.adb \
 	aws-services-split_pages.adb aws-services-transient_pages.adb \
 	aws-services-transient_pages-control.adb \
 	aws-services-web_mail.adb aws-net-sets.adb aws-net-thin.ads \
