--- a/regtests/makefile
+++ b/regtests/makefile
@@ -258,6 +258,7 @@ clean:
 	-rm -f alldifs *.log run? check_mem.run? hello_demo* *.tmp
 	-rm -f stockquoteservice* stock_quote_service* datafeedservice*
 	-rm -f interoplab-* interoplab.ad* googlesearchservice*
+	-rm -f google_search_service*
 	-rm -f wsdl_?_service* wsdl4* wsdl_parse_?-* wsdl_parse_?.ads
 	-rm -fr WSDL_6 wsdl_6.class file[abc].txt* zresres*
 	-rm -f test_all.adb
