Add dependence aws-os_lib-definitions.ads from ../config/src/check_config.c,  otherwise recompilation of check_config.c does not happen on  it modification.

--- a/src/makefile
+++ b/src/makefile
@@ -78,7 +78,7 @@ build: $(CONF_UNITS) $(UNITS) $(TMPLT_UNITS)
 aws-translator-conversion.adb:
 	${MAKE} -C ../config setup
 
-aws-os_lib-definitions.ads:
+aws-os_lib-definitions.ads: ../config/src/check_config.c
 	$(MAKE) -C ../config setup
 
 ifdef ADASOCKETS
