Removes last -lpoll occurence. Not needed now as the -lpoll is  automatically added with a pragma Linker_Options in  AWS.Os_Lib.Definitions.

--- a/demos/makefile
+++ b/demos/makefile
@@ -21,7 +21,7 @@ ifeq ($(MODE),ssl)
 # With SSL support
 
 ifeq (${OS}, Windows_NT)
-LARGS := $(LARGS) -lssl -lcrypto ../lib/aws.coff -lpoll
+LARGS := $(LARGS) -lssl -lcrypto ../lib/aws.coff
 else
 LARGS := $(LARGS) -lssl -lcrypto
 endif
