--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -188,6 +188,8 @@ b~upload3.adb
 b~upload3.ads
 b~upload4.adb
 b~upload4.ads
+b~upload5.adb
+b~upload5.ads
 b~workorder.adb
 b~workorder.ads
 b~wsdl_1_main.adb
