Extensive changes to support build based on GNAT Project files. The makefile based build has been removed. Remove definition file generation.

--- a/win32/makefile
+++ b/win32/makefile
@@ -6,12 +6,9 @@
 # Build the library only if Win32 OS. On other OS these libraries must be
 # installed separately or are most of the time already installed.
 
-GARGS = -m -q $(GFLAGS) -I../src $(INCLUDES)
-
 LIBSSL		= ../lib/libssl.a
 LIBCRYPTO	= ../lib/libcrypto.a
 LIBLDAP		= ../lib/libldap.a
-LIBWIN32	= ../lib/libaws-win32.a
 AWS_COFF	= ../lib/aws.coff
 
 ifeq (${OS}, Windows_NT)
@@ -22,21 +19,20 @@ else
    IMPORT_LIB =
 endif
 
-build: $(RES) $(IMPORT_LIB)
+force:
 
-$(LIBSSL): libssl32.dll
+build:
+	$(GNATMAKE) -Pwin32 -XAWS_BUILD=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA}
+
+$(LIBSSL): libssl32.dll ssl.def
 	echo Building libssl.a
-	dll2def libssl32.dll > ssl.def
 	$(DLLTOOL) --def ssl.def --dllname libssl32.dll \
 	        --output-lib $(LIBSSL)
-	$(RM) ssl.def
 
-$(LIBCRYPTO): libeay32.dll
+$(LIBCRYPTO): libeay32.dll crypto.def
 	echo Building libcrypto.a
-	$(DLL2DEF) libeay32.dll > crypto.def
 	$(DLLTOOL) --def crypto.def --dllname libeay32.dll \
 		--output-lib $(LIBCRYPTO)
-	$(RM) crypto.def
 
 $(LIBLDAP): wldap32.def
 	echo Building libldap.a
@@ -47,23 +43,17 @@ $(AWS_COFF): aws.rc
 	echo Building aws.coff
 	$(WINDRES) -i aws.rc -o $(AWS_COFF)
 
-poll.o : poll.ads poll.adb
-	echo Building Win32 poll support
-	$(GNATMAKE) -u $(GARGS) poll.adb
-
-$(LIBWIN32): wspiapi.o poll.o gai_strerror.o
-	echo Building AWS Win32 support
-	$(AR) r $(LIBWIN32) poll.o wspiapi.o gai_strerror.o
+build_c_support: wspiapi.o gai_strerror.o
+	$(CP) wspiapi.o gai_strerror.o ../.build/debug/win32/obj
+	$(CP) wspiapi.o gai_strerror.o ../.build/release/win32/obj
 
 clean:
-	-$(RM) -f $(LIBSSL) $(LIBCRYPTO) $(LIBWIN32) $(LIBLDAP) *~ aws.coff
-	-$(RM) -f *.o
+	-$(RM) -f $(LIBSSL) $(LIBCRYPTO) $(LIBLDAP) *~ aws.coff
 
-#############################################################################
-# Configuration for GNAT Projet Files
+setup_dir:
+	-$(MKDIR) -p ../.build/debug/win32/obj
+	-$(MKDIR) -p ../.build/debug/win32/lib
+	-$(MKDIR) -p ../.build/release/win32/obj
+	-$(MKDIR) -p ../.build/release/win32/lib
 
-gsetup:
-
-gbuild: build
-
-gclean: clean
+setup: setup_dir $(RES) $(IMPORT_LIB) build_c_support
