--- a/ssl/makefile
+++ b/ssl/makefile
@@ -3,38 +3,13 @@
 
 .SILENT:
 
-GARGS = -u $(INCLUDES) $(GFLAGS)
-
-LIBNOSSLAWS	= ../lib/libnosslaws.a
-
 force:
 
-ssl-thin: force
-	echo Building ssl-thin
-	$(GNATMAKE) -q $(GARGS) ssl
-	$(GNATMAKE) -q $(GARGS) ssl-thin
-
-ssl-wrappers.o: force
-	echo Building ssl-wrappers
-	$(GNATMAKE) -q $(GARGS) ssl-wrappers
-
-$(LIBNOSSLAWS): ssl-wrappers.o
-	$(AR) cr $(LIBNOSSLAWS) ssl-wrappers.o
-	$(RM) ssl-wrappers.o
-
-build: ssl-thin $(LIBNOSSLAWS)
-
-clean:
-	-$(RM) -f *.ali *.o
-
-#############################################################################
-# Configuration for GNAT Projet Files
-
-gbuild:
+build:
 	$(GNATMAKE) -Pssl -XAWS_BUILD=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA}
 	$(GNATMAKE) -Pnossl -XAWS_BUILD=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA}
 
-gsetup:
+setup:
 	-$(MKDIR) -p ../.build/debug/ssl/obj
 	-$(MKDIR) -p ../.build/debug/ssl/lib
 	-$(MKDIR) -p ../.build/debug/ssl/lobj
@@ -42,6 +17,4 @@ gsetup:
 	-$(MKDIR) -p ../.build/release/ssl/lib
 	-$(MKDIR) -p ../.build/release/ssl/lobj
 
-gclean: clean
-	$(RM) -fr ../.build/debug/ssl
-	$(RM) -fr ../.build/release/ssl
+clean:
